--- a/desafio-17/assets/styles/style.css
+++ b/desafio-17/assets/styles/style.css
@@ -17,7 +17,7 @@
   --dark: #121214;
 }
 
-::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar { width: 11px; }
 
 ::-webkit-scrollbar-thumb { background: var(--scroll); border-radius: 8px; }
 
@@ -32,3 +32,15 @@ img { width: 100%; height: auto; object-fit: cover; }
 html { background: var(--dark); }
 
 .container { max-width: 1200px; margin: auto; }
+
+footer, .redes-sociais { display: flex; align-items: center; }
+
+footer { justify-content: space-between; padding: 30px 38px; }
+
+.single-redes-sociais { margin-right: 60px; position: relative; bottom: -2px; }
+
+.single-redes-sociais:last-child { margin-right: 0; }
+
+@media screen and (max-width: 489px) {
+  .single-redes-sociais { margin-right: 30px; }
+}
