--- a/desafio-17/assets/styles/listagem.css
+++ b/desafio-17/assets/styles/listagem.css
@@ -97,12 +97,18 @@
   padding-bottom: 6px;
 }
 
+#container-filmes { display: flex; overflow-x: scroll; padding-bottom: 35px; }
+
 .single-filmes {
   width: 300px;
   height: 440px;
   margin-right: 81px;
   position: relative;
 }
+
+.single-filmes:last-child { margin-right: 0; }
+
+.img-filmes { width: 300px; height: 440px; }
 
 .ds-filmes {
   width: 100%;
