--- a/desafio-20/assets/styles/style.css
+++ b/desafio-20/assets/styles/style.css
@@ -7,8 +7,8 @@
 
 :root {
   --blue: #00D2DF;
-  --gradient-pink: #6518B4;
-  --gradient-purple: #10D7E2;
+  --gradient-pink: linear-gradient(132.33deg, #D24074 -0.67%, #6518B4 102.54%) 1;
+  --gradient-purple: linear-gradient(51.06deg, #9358F7 0.87%, #10D7E2 97.48%) 1;
   --dark: #121212;
   --dark-200: #151515;
   --gray-light: #C4C4C4;
@@ -21,3 +21,143 @@ ol, ul { list-style: none; }
 
 input { outline: none; border: none; }
 
+.container { max-width: 1400px; margin: auto; padding: 0 20px; }
+
+header, .intro { background: var(--dark); }
+
+#sobre { background: var(--dark-200); }
+
+header .container, .menu ul, .container-links { display: flex; align-items: center; }
+
+header .container { justify-content: space-between; padding: 40px 20px; }
+
+.logo h2 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 29px;
+  color: var(--blue);
+}
+
+.menu ul li { margin-right: 62px; }
+
+.menu ul li:last-of-type { margin-right: 0; }
+
+.menu ul li a {
+  font-size: 1.1rem;
+  font-weight: 500;
+  line-height: 22px;
+  color: var(--gray-light);
+}
+
+.intro { height: 734px; }
+
+.intro .container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 192px;
+  /* position: relative; */
+}
+
+.ds-intro p {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 29px;
+  text-transform: uppercase;
+  color: var(--light);
+}
+
+.ds-intro p:first-of-type, .ds-intro h1 { margin-bottom: 12px; }
+
+.ds-intro p:last-of-type { margin-bottom: 60px; }
+
+.ds-intro h1 {
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 77px;
+  text-transform: uppercase;
+  color: var(--blue);
+}
+
+.img-intro {
+  position: absolute;
+  right: 0;
+  top: 100px;
+}
+
+.container-links a {
+  width: 173px;
+  font-weight: 600;
+  line-height: 19px;
+  color: var(--light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 11px 0;
+  border: 2px solid;
+}
+
+.container-links a:first-of-type { margin-right: 30px; }
+
+.ds-intro .container-links a:first-of-type { border-image: var(--gradient-purple); }
+
+.ds-intro .container-links a:last-of-type { border-image: var(--gradient-pink); }
+
+.container-links a img { margin-right: 15px; }
+
+#sobre .container { display: flex; padding: 100px 20px; }
+
+.img-sobre {
+  width: 367px;
+  height: 367px;
+  border-left: 3px solid var(--blue);
+  margin-right: 183px;
+  border-radius: 4px;
+  background: var(--dark);
+}
+
+.img-sobre img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ds-sobre h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 29px;
+  text-transform: uppercase;
+  color: var(--light);
+  margin-bottom: 40px;
+}
+
+.ds-sobre h3 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--light);
+  margin-bottom: 21px;
+}
+
+.ds-sobre p{
+  max-width: 530px;
+  font-size: 1.1rem;
+  font-weight: 300;
+  line-height: 32px;
+  color: var(--gray-light);
+  margin-bottom: 38px;
+}
+
+.ds-sobre .container-midia-social { margin-bottom: 38px; }
+
+.ds-sobre .container-midia-social img { margin-right: 28px; }
+
+.ds-sobre .container-midia-social img:last-of-type { margin-right: 0; }
+
+.ds-sobre .container-links a:first-of-type { border-image: var(--gradient-pink); }
+
+.ds-sobre .container-links a:last-of-type { border-image: var(--gradient-purple); }
+
+
+@media screen and (max-width: 883px) {
+  .menu { display: none; }
+}
