--- a/desafio-13/assets/styles/style.css
+++ b/desafio-13/assets/styles/style.css
@@ -26,9 +26,9 @@ body {
 
 main { min-height: 100vh; background: var(--bg-opacity); }
 
-.container { max-width: 1340px; margin: auto; padding: 0 10px; }
+.container { max-width: 1220px; margin: auto; padding: 0 10px; }
 
-nav.container { display: flex; justify-content: space-between; }
+nav.container { display: flex; justify-content: space-between; align-items: center; }
 
 .left img:first-of-type {
   border-right: 2px solid var(--white);
@@ -43,16 +43,15 @@ nav.container { display: flex; justify-content: space-between; }
   margin: 159px 0 32px 0;
 }
 
-.banner .container { text-align: center; }
-
 .banner .container a {
   font: 600 1.5rem var(--font);
   line-height: 30px;
   color: var(--black);
   text-transform: uppercase;
+  text-align: center;
   display: block;
   max-width: 400px;
-  margin: 0 auto 237px auto;
+  margin: 0 auto 160px auto;
   padding: 19px;
   background: var(--white-200);
   border: 2px solid var(--black);
@@ -60,19 +59,25 @@ nav.container { display: flex; justify-content: space-between; }
 }
 
 .new-episode {
-  max-width: 924px;
+  max-width: 990px;
   padding: 0 20px;
   display: flex;
   align-items: center;
+  position: relative;
+  bottom: -80px;
 }
 
-.img-new-episode { position: relative; background: transparent; z-index: 1; }
+.img-new-episode {  position: relative;  background: transparent;  z-index: 1; }
 
 .img-new-episode img:last-of-type { position: absolute; top: 33%; left: 39%; }
 
 .ds-new-episode {
   width: 100%;
   height: 187px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 200px;
   background: var(--white-200);
   border: 2px solid var(--black);
   position: relative;
@@ -80,7 +85,47 @@ nav.container { display: flex; justify-content: space-between; }
 }
 
 .ds-new-episode h2 {
-  
+  font: 400 2rem var(--font);
+  color: var(--black);
+  line-height: 40px;
+  margin-bottom: 21px;
+}
+
+.ds-new-episode p {
+  font: 400 1.2rem var(--font);
+  color: var(--gray);
+  line-height: 25px;
+}
+
+.bg-new-episode { display: flex; justify-content: flex-end; }
+
+.bg {
+  width: 74%;
+  height: 111px;
+  background: var(--white-200);
+  border-radius: 0px 0px 0px 24px;
+  opacity: .2;
+}
+
+@media screen and (max-width: 805px) {
+  .new-episode {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .img-new-episode { bottom: -60px; }
+
+  .ds-new-episode {
+    max-width: 500px;
+    height: 235px;
+    justify-content: flex-end;
+    padding-left: 0;
+    padding-bottom: 30px;
+    text-align: center;
+    left: 0;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -93,12 +138,16 @@ nav.container { display: flex; justify-content: space-between; }
     max-width: 300px;
     padding: 16px 23px;
   }
-
-
 }
 
 @media screen and (max-width: 525px) {
   .left img:first-of-type { margin-right: 22px; padding-right: 22px; }
+}
 
+@media screen and (max-width: 375px) {
+  .left img:first-of-type { width: 90px; }
 
+  .left img:last-of-type { width: 40px; }
+
+  .right img { width: 120px; }
 }
