--- a/desafio-13/assets/styles/style.css
+++ b/desafio-13/assets/styles/style.css
@@ -141,6 +141,8 @@ nav.container { display: flex; justify-content: space-between; align-items: cent
 }
 
 @media screen and (max-width: 525px) {
+  body { background-image: url(../img/banner-responsivo.jpg); }
+
   .left img:first-of-type { margin-right: 22px; padding-right: 22px; }
 }
 
